# shool_homew

./: bot.py  check_code.py  pyproject.toml  requirements.txt  test.py
models/: base_model.py
models/task/: task.py
models/user/: user.py
models/user_task/: user_task.py
static/: index.html
