[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "R09C",email = "hodarev.ruslan@mail.ru"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
